fix: truncate long strings in ListSelector

--- a/packages/pelagos/src/components/ListSelector.less
+++ b/packages/pelagos/src/components/ListSelector.less
@@ -39,6 +39,7 @@
 			flex: 1;
 			flex-direction: row;
 			align-items: center;
+			overflow: hidden;
 		}
 
 		&__text {
@@ -60,6 +61,7 @@
 			flex-direction: row;
 			align-items: center;
 			padding: @sp-04 @sp-08;
+			overflow: hidden;
 		}
 
 		&__remove,
